--- a/index.html
+++ b/index.html
@@ -295,14 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天拍的照片真的好好看啊</p>
-                <p>感觉都算得上人生照片了</p>
-                <p>csh拍照确实有点东西</p>
-                <p>我认可了</p>
-                <p>但最最主要的</p>
-                <p>还是模特好看</p>
-                <p>今天的赵瑾太美了</p>
-                <p>怎么拍都好看</p>
+                <p>又拍了一天的照片</p>
+                <p>lj朋友圈9张图8个我哈哈哈哈</p>
+                <p>赵瑾今天陪我们拍了一天</p>
+                <p>真是辛苦死了</p>
+                <p>希望他拍的开心</p>
+                <p>我们也出了好多的片</p>
+                <p>圆满的毕业照</p>
+                <p>晚上又在赶报告</p>
+                <p>真的很讨厌这个</p>
+                <p>浪费我的时间</p>
+                <p>我要多和我的宝宝在一起</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
