--- a/index.html
+++ b/index.html
@@ -295,17 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>又拍了一天的照片</p>
-                <p>lj朋友圈9张图8个我哈哈哈哈</p>
-                <p>赵瑾今天陪我们拍了一天</p>
-                <p>真是辛苦死了</p>
-                <p>希望他拍的开心</p>
-                <p>我们也出了好多的片</p>
-                <p>圆满的毕业照</p>
-                <p>晚上又在赶报告</p>
-                <p>真的很讨厌这个</p>
-                <p>浪费我的时间</p>
-                <p>我要多和我的宝宝在一起</p>
+                <p>明天店铺电脑就到货了</p>
+                <p>希望明天他们就发货</p>
+                <p>然后我当天就拿到我的电脑</p>
+                <p>第一次挑一个东西挑了这么久</p>
+                <p>而且真的下单买下了</p>
+                <p>没有额外找爸妈要钱</p>
+                <p>这个过程中学到了好多东西</p>
+                <p>不知道以后我们买车买房了会不会也像这样</p>
+                <p>要好好控制消费呀</p>
+                <p>挣钱不易</p
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
