--- a/index.html
+++ b/index.html
@@ -295,16 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天店铺电脑就到货了</p>
-                <p>希望明天他们就发货</p>
-                <p>然后我当天就拿到我的电脑</p>
-                <p>第一次挑一个东西挑了这么久</p>
-                <p>而且真的下单买下了</p>
-                <p>没有额外找爸妈要钱</p>
-                <p>这个过程中学到了好多东西</p>
-                <p>不知道以后我们买车买房了会不会也像这样</p>
-                <p>要好好控制消费呀</p>
-                <p>挣钱不易</p
+                <p>如果我们是同一届的</p>
+                <p>我们可以一起毕业</p>
+                <p>一起享受我们的gap year</p>
+                <p>一起穿学士服拍照</p>
+                <p>一起迎接未来的挑战</p>
+                <p>我还想和你一起毕业旅行</p>
+                <p>我们会更加同频</p>
+                <p>我们也可以公开</p>
+                <p>但不是同一届的也很好呀</p>
+                <p>我先去前面探探路吧</p>
+                <p>未来也是一样的</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
