--- a/index.html
+++ b/index.html
@@ -295,17 +295,19 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>如果我们是同一届的</p>
-                <p>我们可以一起毕业</p>
-                <p>一起享受我们的gap year</p>
-                <p>一起穿学士服拍照</p>
-                <p>一起迎接未来的挑战</p>
-                <p>我还想和你一起毕业旅行</p>
-                <p>我们会更加同频</p>
-                <p>我们也可以公开</p>
-                <p>但不是同一届的也很好呀</p>
-                <p>我先去前面探探路吧</p>
-                <p>未来也是一样的</p>
+                <p>今天是用新电脑更新的</p>
+                <p>新电脑非常好用</p>
+                <p>我搞了好多个性化设置</p>
+                <p>非常非常好看</p>
+                <p>非常非常喜欢</p>
+                <p>今天还去了福清</p>
+                <p>去了石竹山状元峰，风很大，鼓声也很响</p>
+                <p>这里非常灵，我为你击了鼓</p>
+                <p>你就是状元啦</p>
+                <p>明天我要和赵瑾去看赛龙舟</p>
+                <p>还是决赛嘞</p>
+                <p>一定会很精彩</p>
+                <p>端午安康</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
