--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <p>去了石竹山状元峰，风很大，鼓声也很响</p>
                 <p>这里非常灵，我为你击了鼓</p>
                 <p>你就是状元啦</p>
-                <p>明天我要和赵瑾去看赛龙舟</p>
+                <p>明天我们去看赛龙舟</p>
                 <p>还是决赛嘞</p>
                 <p>一定会很精彩</p>
                 <p>端午安康</p>
