--- a/index.html
+++ b/index.html
@@ -295,19 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>其实今天的松饼一般般</p>
-                <p>奶油太多了很容易腻</p>
-                <p>但是他的饼我真的很喜欢</p>
-                <p>是我最喜欢的口感</p>
-                <p>不会太软，也不是脆的那种</p>
-                <p>今天吃的除了一开始的鱼丸还有最后我们又吃了一份薯条</p>
-                <p>东百-2楼真是让我大开眼界，有非常多吃的</p>
-                <p>明天我们除了吃这个肉肉饭</p>
-                <p>我还想吃这家薯条店的有个像烤肠一样的</p>
-                <p>看起来特别香</p>
-                <p>吃完我们再在附近逛逛</p>
-                <p>明天似乎是阴天，不会太热</p>
-                <p>期待</p>
+                <p>真是服了奥</p>
+                <p>连续两天我的安排都泡汤了</p>
+                <p>虽然是我们一致同意的改变计划</p>
+                <p>哼</p>
+                <p>今天的舒芙蕾还是很好吃</p>
+                <p>碟中谍8也很不错</p>
+                <p>明天我准备把电脑带上给你长长眼</p>
+                <p>嘻嘻</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
