--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>真是服了奥</p>
-                <p>连续两天我的安排都泡汤了</p>
-                <p>虽然是我们一致同意的改变计划</p>
-                <p>哼</p>
-                <p>今天的舒芙蕾还是很好吃</p>
-                <p>碟中谍8也很不错</p>
-                <p>明天我准备把电脑带上给你长长眼</p>
-                <p>嘻嘻</p>
+                <p>又学了一天</p>
+                <p>赵瑾真是太努力了</p>
+                <p>她一定会取得高分的</p>
+                <p>到夏天了</p>
+                <p>希望蚊子不要再咬赵瑾了</p>
+                <p>讨厌的蚊子</p>
+                <p>一天天的过的好快呀</p>
+                <p>唉</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
