--- a/index.html
+++ b/index.html
@@ -295,14 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>又学了一天</p>
-                <p>赵瑾真是太努力了</p>
-                <p>她一定会取得高分的</p>
-                <p>到夏天了</p>
-                <p>希望蚊子不要再咬赵瑾了</p>
-                <p>讨厌的蚊子</p>
-                <p>一天天的过的好快呀</p>
-                <p>唉</p>
+                <p>今天的卤味吃了50块</p>
+                <p>我们俩真的很能吃</p>
+                <p>超级的一盆卤味啊</p>
+                <p>真的很像很好吃</p>
+                <p>明天下午赵瑾又要考试咯</p>
+                <p>加油</p>
+                <p>考完我们再去吃好吃的吧</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
