--- a/index.html
+++ b/index.html
@@ -295,13 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天的卤味吃了50块</p>
-                <p>我们俩真的很能吃</p>
-                <p>超级的一盆卤味啊</p>
-                <p>真的很像很好吃</p>
-                <p>明天下午赵瑾又要考试咯</p>
-                <p>加油</p>
-                <p>考完我们再去吃好吃的吧</p>
+                <p>今天完成投稿啦</p>
+                <p>终于也算告一段落了</p>
+                <p>赵瑾也开始写简历，看官网</p>
+                <p>但这些都只是第一步</p>
+                <p>勇敢地迈出去吧</p>
+                <p>加油老赵</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
