--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天完成投稿啦</p>
-                <p>终于也算告一段落了</p>
-                <p>赵瑾也开始写简历，看官网</p>
-                <p>但这些都只是第一步</p>
-                <p>勇敢地迈出去吧</p>
-                <p>加油老赵</p>
+                <p>啊我的世界太好玩了</p>
+                <p>嘻嘻</p>
+                <p>好久没有和大家一起玩过一个游戏这么久了</p>
+                <p>哎以后可能再也不会这样了</p>
+                <p>我的青春啊~</p>
+                <p>老赵</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
