--- a/index.html
+++ b/index.html
@@ -295,12 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>啊我的世界太好玩了</p>
-                <p>嘻嘻</p>
-                <p>好久没有和大家一起玩过一个游戏这么久了</p>
-                <p>哎以后可能再也不会这样了</p>
-                <p>我的青春啊~</p>
-                <p>老赵</p>
+                <p>小瑾瑾</p>
+                <p>情绪价值只是感情中的一部分</p>
+                <p>互相提供情绪价值</p>
+                <p>就像互相帮助，互相满足</p>
+                <p>是感情中最基础的一部分</p>
+                <p>最重要的</p>
+                <p>还是你愿意这么做</p>
+                <p>因为你爱我，我也</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
