--- a/index.html
+++ b/index.html
@@ -295,14 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>小瑾瑾</p>
-                <p>情绪价值只是感情中的一部分</p>
-                <p>互相提供情绪价值</p>
-                <p>就像互相帮助，互相满足</p>
-                <p>是感情中最基础的一部分</p>
-                <p>最重要的</p>
-                <p>还是你愿意这么做</p>
-                <p>因为你爱我，我也</p>
+                <p>今天我们讨论了读遗传还是植物学</p>
+                <p>思来想去</p>
+                <p>我也有点焦虑</p>
+                <p>如果没有考上不仅仅是时间上的浪费</p>
+                <p>还有好多好多事情都会受到影响</p>
+                <p>但我们一定要勇敢好吗</p>
+                <p>无论选择考什么</p>
+                <p>你都可以做到的</p>
+                <p>我们都一定能拿下</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
