--- a/index.html
+++ b/index.html
@@ -295,15 +295,25 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天我们讨论了读遗传还是植物学</p>
-                <p>思来想去</p>
-                <p>我也有点焦虑</p>
-                <p>如果没有考上不仅仅是时间上的浪费</p>
-                <p>还有好多好多事情都会受到影响</p>
-                <p>但我们一定要勇敢好吗</p>
-                <p>无论选择考什么</p>
-                <p>你都可以做到的</p>
-                <p>我们都一定能拿下</p>
+                <p>昨天看到那条出国留学的那条微信我愣了一下</p>
+                <p>这两天我也在想未来的一些规划</p>
+                <p>刚好我们下午也发现那两位新来的老师都是院长奖</p>
+                <p>小红书也正好有刷到相关的</p>
+                <p>都说发的CNS之类的非常厉害才可以拿到</p>
+                <p>我不禁有些焦虑</p>
+                <p>现在有一些找不到方向了</p>
+                <p>没有什么能推着我走</p>
+                <p>但我突然很想去尝试新的事物</p>
+                <p>想去推进我的未来</p>
+                <p>想找到一些够得着的有希望的目标</p>
+                <p>但是这样其实不是很好</p>
+                <p>我总觉得如果是自己的兴趣</p>
+                <p>就像在现在相对没有工作的时间里练习吉他练习画画</p>
+                <p>但我做不到，我没办法享受这样的空闲时间去做这些</p>
+                <p>或许我是一个工作狂</p>
+                <p>可是这段时间我确确实实的在做一件我喜欢的事情</p>
+                <p>可能这是我真正喜欢的在百无聊赖的生活里能够坚持下去的方向</p>
+                <p>就是陪在爱的人身边</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
