--- a/index.html
+++ b/index.html
@@ -295,14 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天咋安排啊</p>
-                <p>这几天不知道为啥胃口很好</p>
-                <p>每餐都吃的超级无敌饱</p>
-                <p>撑的难受</p>
-                <p>但是不知道为啥就是一直吃不饱</p>
-                <p>好奇怪</p>
-                <p>可能是因为太思念了</p>
-                <p>想你嘻嘻</p>
+                <p>大分别之前迎来了小分别</p>
+                <p>明天和后天都见不到咯</p>
+                <p>我会想你的</p>
+                <p>我们每天都要打视频</p>
+                <p>和我去实习那几天一样</p>
+                <p>希望赵瑾实习一切顺利</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
