--- a/index.html
+++ b/index.html
@@ -295,12 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>大分别之前迎来了小分别</p>
-                <p>明天和后天都见不到咯</p>
-                <p>我会想你的</p>
-                <p>我们每天都要打视频</p>
-                <p>和我去实习那几天一样</p>
-                <p>希望赵瑾实习一切顺利</p>
+                <p>你能不能告诉我</p>
+                <p>你到底给我下了什么药啊</p>
+                <p>你竟然能让我在一天24小时</p>
+                <p>1440分钟，86363秒都在想你啊</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
