--- a/index.html
+++ b/index.html
@@ -295,10 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>你能不能告诉我</p>
-                <p>你到底给我下了什么药啊</p>
-                <p>你竟然能让我在一天24小时</p>
-                <p>1440分钟，86363秒都在想你啊</p>
+                <p>明天就要见面啦</p>
+                <p>两天没见了</p>
+                <p>想你</p>
+                <p>厦门好玩吧</p>
+                <p>漂亮吧</p>
+                <p>下次带你好好玩玩</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
