--- a/index.html
+++ b/index.html
@@ -295,12 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天就要见面啦</p>
-                <p>两天没见了</p>
-                <p>想你</p>
-                <p>厦门好玩吧</p>
-                <p>漂亮吧</p>
-                <p>下次带你好好玩玩</p>
+                <p>今天晚上见面了</p>
+                <p>一起刷了两个小时的六级</p>
+                <p>明天早上我准备再看看阅读和作文</p>
+                <p>一定能取得好成绩的</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
