--- a/index.html
+++ b/index.html
@@ -295,11 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天晚上见面了</p>
-                <p>一起刷了两个小时的六级</p>
-                <p>明天早上我准备再看看阅读和作文</p>
-                <p>一定能取得好成绩的</p>
-                <p>爱你</p>
+                <p>你是勇敢的</p>
+                <p>你是努力的</p>
+                <p>你是自信的</p>
+                <p>你是可爱的</p>
+                <p>你是美丽的</p>
+                <p>你是优秀的</p>
+                <p>我是爱你的</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
