--- a/index.html
+++ b/index.html
@@ -295,13 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>你是勇敢的</p>
-                <p>你是努力的</p>
-                <p>你是自信的</p>
-                <p>你是可爱的</p>
-                <p>你是美丽的</p>
-                <p>你是优秀的</p>
-                <p>我是爱你的</p>
+                <p>等我画完我们就换头像吧</p>
+                <p>今天画了两个小时还没画完</p>
+                <p>明天要好早起啊</p>
+                <p>希望明天能帅帅的走完聚齐大道</p>
+                <p>拍到超级帅的照片</p>
+                <p>下午大战一场</p>
+                <p>晚上再战两场</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
