--- a/index.html
+++ b/index.html
@@ -295,13 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>头像已经画完啦</p>
-                <p>等你看到这条更新就我们就换头像吧</p>
-                <p>明天要走12km啊</p>
-                <p>水一定要备好</p>
-                <p>ccd也可以带呀</p>
-                <p>拍一拍沿途的绿色海洋</p>
-                <p>让路途不这么单调劳累</p>
+                <p>驯龙高手好看吧</p>
+                <p>还有好多好多的很好看的经典电影</p>
+                <p>有很多很精彩感人热血的故事</p>
+                <p>都等着你去聆听喔</p>
+                <p>有时间有心情了可以多看看</p>
+                <p>无论动漫还是真人的</p>
+                <p>影视发展到现在</p>
+                <p>有太多太多的经典了</p>
+                <p>他会带给你视觉上的心灵上的洗礼</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
