--- a/index.html
+++ b/index.html
@@ -295,15 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>驯龙高手好看吧</p>
-                <p>还有好多好多的很好看的经典电影</p>
-                <p>有很多很精彩感人热血的故事</p>
-                <p>都等着你去聆听喔</p>
-                <p>有时间有心情了可以多看看</p>
-                <p>无论动漫还是真人的</p>
-                <p>影视发展到现在</p>
-                <p>有太多太多的经典了</p>
-                <p>他会带给你视觉上的心灵上的洗礼</p>
+                <p>今天舍友都回去了</p>
+                <p>刚好目送了最后一个舍友离开</p>
+                <p>真的会感慨</p>
+                <p>和之前暑假一个人在宿舍不一样</p>
+                <p>孤独的感觉啊</p>
+                <p>聚合离散，物是人非</p>
+                <p>最后的几天</p>
+                <p>想要你在身边</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
