--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天舍友都回去了</p>
-                <p>刚好目送了最后一个舍友离开</p>
-                <p>真的会感慨</p>
-                <p>和之前暑假一个人在宿舍不一样</p>
-                <p>孤独的感觉啊</p>
-                <p>聚合离散，物是人非</p>
-                <p>最后的几天</p>
-                <p>想要你在身边</p>
+                <p>今天运动量达标了</p>
+                <p>明天我们继续保持运动吧</p>
+                <p>今晚可以早点睡</p>
+                <p>现在才十点就感觉困了</p>
+                <p>感觉你最近好多事情要忙啊宝宝</p>
+                <p>替你感到压力和紧张</p>
+                <p>加油宝宝</p>
+                <p>我陪着你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
