--- a/index.html
+++ b/index.html
@@ -295,14 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天运动量达标了</p>
-                <p>明天我们继续保持运动吧</p>
-                <p>今晚可以早点睡</p>
-                <p>现在才十点就感觉困了</p>
-                <p>感觉你最近好多事情要忙啊宝宝</p>
-                <p>替你感到压力和紧张</p>
-                <p>加油宝宝</p>
-                <p>我陪着你</p>
+                <p>今天是犯鼻炎的一天</p>
+                <p>难受啊一直流鼻涕</p>
+                <p>头庸庸</p>
+                <p>赵瑾复习的时候真的是会一直打小差啊</p>
+                <p>专注力有待提高哦</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
