--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天是犯鼻炎的一天</p>
-                <p>难受啊一直流鼻涕</p>
-                <p>头庸庸</p>
-                <p>赵瑾复习的时候真的是会一直打小差啊</p>
-                <p>专注力有待提高哦</p>
+                <p>明天去哪玩儿呀</p>
+                <p>我想出去住</p>
+                <p>我想我们一直呆在一起</p>
+                <p>出去散步，吃东西</p>
+                <p>最后一门考试加油</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
