--- a/index.html
+++ b/index.html
@@ -295,11 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天去哪玩儿呀</p>
-                <p>我想出去住</p>
-                <p>我想我们一直呆在一起</p>
-                <p>出去散步，吃东西</p>
-                <p>最后一门考试加油</p>
+                <p>悲莫悲兮生别离</p>
+                <p>等我们异地了，我们会时常的想念对方</p>
+                <p>但比起古人，我们能更方便的联系和分享</p>
+                <p>所以我想我们不会悲伤</p>
+                <p>我们要保持“生别常恻恻”</p>
+                <p>因为我们不是死别，故不可“吞声”奥</p>
+                <p>坚持想你，坚持爱你</p>
+                <p>借着异地的契机，keep things fresh</p>
+                <p>让我们以后的每次见面都能够</p>
+                <p>乐莫乐兮，如新相知</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
