--- a/index.html
+++ b/index.html
@@ -295,16 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>悲莫悲兮生别离</p>
-                <p>等我们异地了，我们会时常的想念对方</p>
-                <p>但比起古人，我们能更方便的联系和分享</p>
-                <p>所以我想我们不会悲伤</p>
-                <p>我们要保持“生别常恻恻”</p>
-                <p>因为我们不是死别，故不可“吞声”奥</p>
-                <p>坚持想你，坚持爱你</p>
-                <p>借着异地的契机，keep things fresh</p>
-                <p>让我们以后的每次见面都能够</p>
-                <p>乐莫乐兮，如新相知</p>
+                <p>今晚是在福建农林大学的最后一晚啦</p>
+                <p>也是在学校里的最后一次更新了</p>
+                <p>有点舍不得，有点不舍得</p>
+                <p>有你的陪伴</p>
+                <p>本科阶段也是完美的画上了句号</p>
+                <p>明天就要离开咯</p>
+                <p>你陪我</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
