--- a/index.html
+++ b/index.html
@@ -295,13 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今晚是在福建农林大学的最后一晚啦</p>
-                <p>也是在学校里的最后一次更新了</p>
-                <p>有点舍不得，有点不舍得</p>
-                <p>有你的陪伴</p>
-                <p>本科阶段也是完美的画上了句号</p>
-                <p>明天就要离开咯</p>
-                <p>你陪我</p>
+                <p>回家了</p>
+                <p>断更了两天</p>
+                <p>我心里愧疚啊</p>
+                <p>或许是因为我们腻歪了两天</p>
+                <p>分开的时候其实没有很大的触动</p>
+                <p>随着时间的流逝</p>
+                <p>我们应该会越来越想念对方吧</p>
+                <p>异地的第0天</p>
+                <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
