--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>回家了</p>
-                <p>断更了两天</p>
-                <p>我心里愧疚啊</p>
-                <p>或许是因为我们腻歪了两天</p>
-                <p>分开的时候其实没有很大的触动</p>
-                <p>随着时间的流逝</p>
-                <p>我们应该会越来越想念对方吧</p>
-                <p>异地的第0天</p>
+                <p>赵瑾今天去健身请了一个教练了</p>
+                <p>然后高强度练了一个小时</p>
+                <p>练的腿酸手麻的</p>
+                <p>听说你是健身圣体</p>
+                <p>希望你能利用好你的天赋</p>
+                <p>好好训练</p>
+                <p>好好减脂</p>
+                <p>练成归来</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
