--- a/index.html
+++ b/index.html
@@ -295,14 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾今天去健身请了一个教练了</p>
-                <p>然后高强度练了一个小时</p>
-                <p>练的腿酸手麻的</p>
-                <p>听说你是健身圣体</p>
-                <p>希望你能利用好你的天赋</p>
-                <p>好好训练</p>
-                <p>好好减脂</p>
-                <p>练成归来</p>
+                <p>今天是充实开心的一天</p>
+                <p>今天聚会的同学好多都是7年没见了</p>
+                <p>真是一晃眼啊</p>
+                <p>感慨</p>
+                <p>未来我们往回看</p>
+                <p>也是一转眼就好多年了</p>
+                <p>一转眼就是一辈子</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
