--- a/index.html
+++ b/index.html
@@ -295,13 +295,18 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天是充实开心的一天</p>
-                <p>今天聚会的同学好多都是7年没见了</p>
-                <p>真是一晃眼啊</p>
-                <p>感慨</p>
-                <p>未来我们往回看</p>
-                <p>也是一转眼就好多年了</p>
-                <p>一转眼就是一辈子</p>
+                <p>警察局是一个是非之地</p>
+                <p>我很不喜欢这样的环境</p>
+                <p>太复杂，太混乱</p>
+                <p>特别是深夜凌晨的时候</p>
+                <p>有人斗殴，有人洗钱，有人丢耳机</p>
+                <p>还有一处和警察局差不多的地方</p>
+                <p>是凌晨的医院</p>
+                <p>世间的百态在此些地方展现的淋淋尽致</p>
+                <p>我身处其中，感到悲哀、烦躁、疲惫</p>
+                <p>我想逃避，如果可以</p>
+                <p>我想就和你在一起</p>
+                <p>因为我身处其中，感到幸福、平静、心安</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
