--- a/index.html
+++ b/index.html
@@ -295,18 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>警察局是一个是非之地</p>
-                <p>我很不喜欢这样的环境</p>
-                <p>太复杂，太混乱</p>
-                <p>特别是深夜凌晨的时候</p>
-                <p>有人斗殴，有人洗钱，有人丢耳机</p>
-                <p>还有一处和警察局差不多的地方</p>
-                <p>是凌晨的医院</p>
-                <p>世间的百态在此些地方展现的淋淋尽致</p>
-                <p>我身处其中，感到悲哀、烦躁、疲惫</p>
-                <p>我想逃避，如果可以</p>
-                <p>我想就和你在一起</p>
-                <p>因为我身处其中，感到幸福、平静、心安</p>
+                <p>今天在家里宅了一天</p>
+                <p>我原来是一个宅男啊</p>
+                <p>在家里抚育我受伤的心灵</p>
+                <p>今天还做了一个决定</p>
+                <p>要进组去</p>
+                <p>只有这件事能驱使我出门了</p>
+                <p>飞吧飞吧</p>
+                <p>去远方吧</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
