--- a/index.html
+++ b/index.html
@@ -295,14 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天在家里宅了一天</p>
-                <p>我原来是一个宅男啊</p>
-                <p>在家里抚育我受伤的心灵</p>
-                <p>今天还做了一个决定</p>
-                <p>要进组去</p>
-                <p>只有这件事能驱使我出门了</p>
-                <p>飞吧飞吧</p>
-                <p>去远方吧</p>
+                <p>无事发生的一天</p>
+                <p>家里有好多东西都出问题了</p>
+                <p>都用了十年了</p>
+                <p>我们决定换一波冰箱和电视</p>
+                <p>换新咯</p>
+                <p>( •̀ ω •́ )y</p>
+                <p>期待我们崭新的未来</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
