--- a/index.html
+++ b/index.html
@@ -295,13 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>无事发生的一天</p>
-                <p>家里有好多东西都出问题了</p>
-                <p>都用了十年了</p>
-                <p>我们决定换一波冰箱和电视</p>
-                <p>换新咯</p>
-                <p>( •̀ ω •́ )y</p>
-                <p>期待我们崭新的未来</p>
+                <p>要离开了才发现家里好舒服</p>
+                <p>有点害怕过去那边的生活</p>
+                <p>希望到时一切顺利</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
