--- a/index.html
+++ b/index.html
@@ -295,9 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>要离开了才发现家里好舒服</p>
-                <p>有点害怕过去那边的生活</p>
-                <p>希望到时一切顺利</p>
+                <p>忙碌的一天</p>
+                <p>今天订了机票，回了老家，安排了行程</p>
+                <p>明天去乡下</p>
+                <p>我发现只要带上我们的戒指</p>
+                <p>我就不会害怕远行</p>
+                <p>因为心有牵挂</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
