--- a/index.html
+++ b/index.html
@@ -295,12 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>忙碌的一天</p>
-                <p>今天订了机票，回了老家，安排了行程</p>
-                <p>明天去乡下</p>
-                <p>我发现只要带上我们的戒指</p>
-                <p>我就不会害怕远行</p>
-                <p>因为心有牵挂</p>
+                <p>今天吃了两根冰棒</p>
+                <p>爽歪歪</p>
+                <p>今天还下乡烧香了</p>
+                <p>我从小烧香拜拜的时候就总会被掉下来的灰烫到</p>
+                <p>所以我每次都会很小心</p>
+                <p>但灰还是总会落到我手上</p>
+                <p>今天又被烫到了两次</p>
+                <p>可能是他们对我们祭拜的回应吧</p>
+                <p>保佑我们平平安安，万事如意</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
