--- a/index.html
+++ b/index.html
@@ -295,15 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天吃了两根冰棒</p>
-                <p>爽歪歪</p>
-                <p>今天还下乡烧香了</p>
-                <p>我从小烧香拜拜的时候就总会被掉下来的灰烫到</p>
-                <p>所以我每次都会很小心</p>
-                <p>但灰还是总会落到我手上</p>
-                <p>今天又被烫到了两次</p>
-                <p>可能是他们对我们祭拜的回应吧</p>
-                <p>保佑我们平平安安，万事如意</p>
+                <p>真是有了新欢就忘了旧爱啊</p>
+                <p>今天是用旧电脑更新的</p>
+                <p>现在用这台电脑真是哪哪都不如新的</p>
+                <p>但你不一样</p>
+                <p>我会一直爱赵瑾的，一直都爱</p>
+                <p>今天开了夜路的高速</p>
+                <p>晚上的高速有点可怕/p>
+                <p>以后还是要避免晚上开高速</p>
+                <p>我真是好笨 行李能忘在老家</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
