--- a/index.html
+++ b/index.html
@@ -295,15 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>天啊今天包了一天的茶叶</p>
-                <p>真是累啊</p>
-                <p>完全是流水线工作</p>
-                <p>又无聊又没意义</p>
-                <p>我舅妈就在旁边一直跟我说</p>
-                <p>这就是生活的苦</p>
-                <p>你不受学习的苦，就要受生活的苦</p>
-                <p>有些片面，但也不无道理</p>
-                <p>加油宝宝，好好学习</p>
+                <p>今天改好了文章格式</p>
+                <p>真是很完美啊</p>
+                <p>请说谢谢老公</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
