--- a/index.html
+++ b/index.html
@@ -295,9 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天改好了文章格式</p>
-                <p>真是很完美啊</p>
-                <p>请说谢谢老公</p>
+                <p>紧张</p>
+                <p>又要远行了</p>
+                <p>期待</p>
+                <p>未知的生活</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
