--- a/index.html
+++ b/index.html
@@ -295,10 +295,18 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>紧张</p>
-                <p>又要远行了</p>
-                <p>期待</p>
-                <p>未知的生活</p>
+                <p>怎么说呢</p>
+                <p>挺有趣的一天</p>
+                <p>同门都很和善</p>
+                <p>老师也很好</p>
+                <p>这里的环境其实很不错</p>
+                <p>超出预期了</p>
+                <p>今天还拿到了一个面朝泰山的工位</p>
+                <p>明天拍给你看 超级美</p>
+                <p>虽然这个租的房间有些许不尽人意</p>
+                <p>总的来说无伤大雅</p>
+                <p>很满意的一天</p>
+                <p>不知道今天赵瑾过得开不开心呢</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
