--- a/index.html
+++ b/index.html
@@ -295,10 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>拿到了一个课题</p>
-                <p>很有意思的一个东西</p>
-                <p>有机会发一个很不错的刊物</p>
-                <p>希望一切顺利</p>
+                <p>泰安这座城市给我感觉还不错</p>
+                <p>第一印象比福州要好</p>
+                <p>北方的气候其实感觉和南方差的不多</p>
+                <p>可能只是这两周相似</p>
+                <p>今天又努力了一天</p>
+                <p>明天也要继续坚持</p>
+                <p>我们都一样</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
