--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>泰安这座城市给我感觉还不错</p>
-                <p>第一印象比福州要好</p>
-                <p>北方的气候其实感觉和南方差的不多</p>
-                <p>可能只是这两周相似</p>
-                <p>今天又努力了一天</p>
-                <p>明天也要继续坚持</p>
-                <p>我们都一样</p>
+                <p>我发现我这几天的运动步数都在10000+</p>
+                <p>但是除了第一天其他几天我都没感觉有走那么多的路</p>
+                <p>这几天也没有称体重</p>
+                <p>不知道瘦了没</p>
+                <p>不过赵瑾肯定是瘦了</p>
+                <p>因为每天都有运动</p>
+                <p>真是太厉害了</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
