--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我发现我这几天的运动步数都在10000+</p>
-                <p>但是除了第一天其他几天我都没感觉有走那么多的路</p>
-                <p>这几天也没有称体重</p>
-                <p>不知道瘦了没</p>
-                <p>不过赵瑾肯定是瘦了</p>
-                <p>因为每天都有运动</p>
-                <p>真是太厉害了</p>
+                <p>是啊</p>
+                <p>我们都在慢慢的步入正轨</p>
+                <p>希望我们每天都能完成我们的目标</p>
+                <p>达到心中的预期</p>
+                <p>共勉</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
