--- a/index.html
+++ b/index.html
@@ -295,11 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>是啊</p>
-                <p>我们都在慢慢的步入正轨</p>
-                <p>希望我们每天都能完成我们的目标</p>
-                <p>达到心中的预期</p>
-                <p>共勉</p>
+                <p>勤勤恳恳搞科研的一天</p>
+                <p>今天成功做出来了一个结果</p>
+                <p>不知道宝宝今天学了多少</p>
+                <p>我们都要有所收获</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
