--- a/index.html
+++ b/index.html
@@ -295,10 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>勤勤恳恳搞科研的一天</p>
-                <p>今天成功做出来了一个结果</p>
-                <p>不知道宝宝今天学了多少</p>
-                <p>我们都要有所收获</p>
+                <p>后天要开组会了</p>
+                <p>紧张</p>
+                <p>今天散步和另一个一起散步的老师聊天</p>
+                <p>发现他也是山西的 大同的</p>
+                <p>没想到这么巧</p>
+                <p>我就和他说我女朋友也是山西的</p>
+                <p>我和他开玩笑让他说云南 说头晕</p>
+                <p>像我们在一起的时候一样</p>
+                <p></p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
