--- a/index.html
+++ b/index.html
@@ -295,17 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这两天我的这个课题从艰难的磕磕绊绊</p>
-                <p>到现在研究能做的很顺畅了</p>
-                <p>思路也在探索中逐渐清晰</p>
-                <p>慢慢的在完善</p>
-                <p>可是我听说</p>
-                <p>有一只胖胖猪这两天又是吃又是睡的</p>
-                <p>没有在好好学习</p>
-                <p>虽然我这么优秀</p>
-                <p>养一只胖胖猪是没问题的</p>
-                <p>但是希望我的宝宝能自律一点</p>
-                <p>优秀的女人最美丽</p>
+                <p>宝宝</p>
+                <p>不必担忧我们的感情</p>
+                <p>我们会足够坚定</p>
+                <p>我们需要做的</p>
+                <p>就是走好现在</p>
+                <p>变得足够优秀</p>
+                <p>让我们的未来更美好</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
