--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>宝宝</p>
-                <p>不必担忧我们的感情</p>
-                <p>我们会足够坚定</p>
-                <p>我们需要做的</p>
-                <p>就是走好现在</p>
-                <p>变得足够优秀</p>
-                <p>让我们的未来更美好</p>
+                <p>泰山</p>
+                <p>今天也是有幸步行了一段山脚</p>
+                <p>感觉真的好多古建筑啊</p>
+                <p>梦回古代</p>
+                <p>找个时间一起爬完整段吧</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
