--- a/index.html
+++ b/index.html
@@ -295,11 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>泰山</p>
-                <p>今天也是有幸步行了一段山脚</p>
-                <p>感觉真的好多古建筑啊</p>
-                <p>梦回古代</p>
-                <p>找个时间一起爬完整段吧</p>
+                <p>今天又又又有大进步！</p>
+                <p>爽爽爽</p>
+                <p>开心</p>
+                <p>得到了一个很关键的结果</p>
+                <p>希望后续也顺顺利利</p>
+                <p>我的宝宝也要一样</p>
+                <p>顺顺利利！</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
