--- a/index.html
+++ b/index.html
@@ -295,18 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今晚的风很大</p>
-                <p>我们办公室把窗户都打开了</p>
-                <p>一阵阵的呼呼吹来</p>
-                <p>文件纸张四处乱飞</p>
-                <p>我的心绪也有些凌乱</p>
-                <p>过来这里也快两周了</p>
-                <p>一切的人和事都很好</p>
-                <p>最近也有在好好学习好好工作</p>
-                <p>风吹而过</p>
-                <p>听着风声，我想暂时放下这两周拽在手上的东西</p>
-                <p>好好放松一下</p>
-                <p>好好想你一下</p>
+                <p>这两天都在下雨</p>
+                <p>这里的雨不像福建</p>
+                <p>这里的雨像阵雨</p>
+                <p>下雨的时候也不会潮</p>
+                <p>是很舒服的凉风</p>
+                <p>然后又很快出太阳</p>
+                <p>生活有条不紊的进行着</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
