--- a/index.html
+++ b/index.html
@@ -295,13 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这两天都在下雨</p>
-                <p>这里的雨不像福建</p>
-                <p>这里的雨像阵雨</p>
-                <p>下雨的时候也不会潮</p>
-                <p>是很舒服的凉风</p>
-                <p>然后又很快出太阳</p>
-                <p>生活有条不紊的进行着</p>
+                <p>昨天没有更新</p>
+                <p>没有更新的原因是因为去打羽毛球了</p>
+                <p>打完之后就回家休息了</p>
+                <p>现在补更一下</p>
+                <p>解释一下原因</p>
+                <p>以上</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
