--- a/index.html
+++ b/index.html
@@ -295,12 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>昨天没有更新</p>
-                <p>没有更新的原因是因为去打羽毛球了</p>
-                <p>打完之后就回家休息了</p>
-                <p>现在补更一下</p>
-                <p>解释一下原因</p>
-                <p>以上</p>
+                <p>今天散步的时候我问老师</p>
+                <p>他离开了生活了19年的昆明会不会舍不得</p>
+                <p>他的妻儿都还在那边</p>
+                <p>他有两个孩子</p>
+                <p>在他博二时就有了第一个孩子</p>
+                <p>他说还好</p>
+                <p>在那边的中科院系统会给孩子很好的教育资源</p>
+                <p>经济方面也不会有压力</p>
+                <p>工作也不会很多</p>
+                <p>就是很稳定</p>
+                <p>我们以后也会过上幸福快乐稳定的生活</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
